# eye-ai-ml

./: README.md  bump-version.sh  hvf_extraction_bulk_1.0.0.py  pyproject.toml  release.sh
.github/workflows/: release.yml
Glaucoma Suspect or No Glaaucoma/: Cleaned_Optic_Disc_Cropping_Algorithm_1_0_3.py  Cleaned_Optic_Disc_Cropping_Algorithm_1_0_3_SVG.py  Crop_Detector_1_0_0.py  Optic_Disc_Cropping_Algorithm_1.0.3.py  Optic_Disc_Cropping_Algorithm_1_0_3.py  load_and_predict.py
Glaucoma Suspect or No Glaaucoma/Old/: Crop_Detector_1_0_0.py  load_and_predict.py
Multimodal/: hvf_extraction_1.0.0.py
eye_ai/: __init__.py  eye_ai.py
eye_ai/docs/: VM_setup_instruction.md
eye_ai/eye_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eye_ai/eye_ai_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eye_ai/ingest/multimodal/: RNFL.md
eye_ai/models/: deit_diagnosis_train.py  vgg19_diagnosis_fine_tune_train.py  vgg19_diagnosis_predict.py  vgg19_diagnosis_predict_more_metrics.py  vgg19_diagnosis_train.py  vgg19_disk_crop_predict.py  vgg19_hyper_parameter_tuning.py  vgg19_lacdhs_angle_predict.py  vgg19_lacdhs_angle_train.py  vgg19_lacdhs_laterality_predict.py  vgg19_lacdhs_laterality_train.py  vgg19_lacdhs_quality_predict.py  vgg19_lacdhs_quality_train.py  vgg19_lacdhs_quality_van_graded_train.py  vgg19_untrained_eval.py  vgg19_visualize_model_architecture.py
eye_ai_ml/glaucoma/: diagnosis_prediction.py  load_and_predict.py  optic_disk_crop.py
tests/: test_eye_ai.py
