[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "eye-ai"
authors = [
    {name = "Your Name", email = "you@yourdomain.com"},
]
description = "ML code for the EYE-AI project"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "deriva-ml",
    "pandas",
    "pillow",
    "matplotlib",
    "scikit-learn"
]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true

[metadata]
license = "Apache 2.0"
keywords = ["eye-ai", "ml"]