[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "eye-ai"
authors = [
    {name = "ISI ISRD", email = "isrd-dev@isi.edu"},
]
description = "ML code for the EYE-AI project"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "deriva-ml",
    "pandas",
    "pillow",
    "matplotlib",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "bump-my-version",
    "pytest>=8.4.1",
    "pytest-coverage>=0.0",
    "setuptools_scm",
    "ruff"
]
lint = [
    "ruff>=0.12.7",
]

[tool.setuptools.package-data]
# include VERSION file to a package

[tool.setuptools_scm]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"

[metadata]
license = "Apache 2.0"
keywords = ["eye-ai", "ml"]
